--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 audio_cache/
 pretrained_models/
 wav2vec2_checkpoints/
+ParlaMint-PL.conllu/
+ParlaMint-PL.TEI/
+ParlaMint-PL.txt/
+ParlaMint-PL.vert/
+ParlaMint-PL.TEI.ana/
+```
